trunk/Archive2/79/d9c5b7a85bee79/main.cpp
#include <stdio.h>

void main()
{
    int x,y;
    x=50
    
    if((x>45) && (x<=60))     //se x for maior que 45 e menor que 60
    printf("o numero %d esta entre 45 e 60\n",x); //será impresso na tela esta frase.
}
